<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnDe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="masukan_teks">Masukan Teks</string>
    <string name="enkripsi_teks">Enkripsi Teks</string>
    <string name="mas_tek">Masukan Teks Disini</string>
    <string name="kunci">Kunci</string>
    <string name="enkripsikan">Enkripsikan</string>
    <string name="mas_kun">14</string>
    <string name="tombol_kembali">Kembali</string>
    <string name="tampil_hasil">Hasil Enkripsi</string>
    <string name="tampilan_dekripsi">Dekripsi Teks</string>
    <string name="tampilan_enkripsi">Enkripsi Teks</string>
    <string name="dekripsi_teks">Deskripsi Teks</string>
    <string name="dekripsikan">Deskripsikan</string>
    <string name="hasil_dekripsi">Hasil Dekripsi</string>
    <string name="tampilan_utama">Tampilan Utama</string>
    <string name="menu_tombol_enkripsi">Enkripsi</string>
    <string name="menu_tombol_dekripsi">Dekripsi</string>
    <string name="tombol_keluar">Keluar</string>

</resources>
