<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.tego.workshop.android.ende.TampilanUtama"
    tools:ignore="RtlHardcoded" >

    <Button
        android:id="@+id/btnTamEnTek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/menu_tombol_enkripsi"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnTamDeTek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTamEnTek"
        android:layout_below="@+id/btnTamEnTek"
        android:text="@string/menu_tombol_dekripsi"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnKeluar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTamDeTek"
        android:layout_below="@+id/btnTamDeTek"
        android:text="@string/tombol_keluar"
        android:typeface="monospace" />

</RelativeLayout>
