<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.tego.workshop.android.ende.TampilanDekripsi"
    tools:ignore="UselessParent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvDekripsiTeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dekripsi_teks"
                android:textColor="@color/kuning"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/etMasukanDekripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:typeface="monospace" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tvKunci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kunci"
                android:textColor="@color/kuning"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/etMasukanKunci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnDekripsikan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dekripsikan"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnDeKem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tombol_kembali"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvHasilDeskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasil_dekripsi"
                android:textColor="@color/kuning"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
